--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,12 +22,12 @@
         <a href="{{ '/' | absolute_url }}">
           <h1><a style="color:white" href="https://xemicris.com">xemicris.com</a></h1>
         </a>
-        <h2>{{ site.description | default: site.github.project_tagline }}</h2>
+        <h2>Desarrollador Web</h2>
         {% if site.github.is_project_page %}
           <a href="{{ site.github.repository_url }}" class="button"><small>View project on</small> GitHub</a>
         {% endif %}
         {% if site.github.is_user_page %}
-          <a href="{{ site.github.owner_url }}" class="button"><small>Follow me on</small> GitHub</a>
+          <a href="{{ site.github.owner_url }}" class="button"><small>Sigueme en</small> GitHub</a>
         {% endif %}
       </div>
     </header>
